<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_numberphone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/quesha"
        android:text="Phone Number"
        android:alpha="0"
        android:textColor="@color/black_text"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutNumberPhone"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/quesha"
        android:text="name"
        android:alpha="0"
        android:textColor="@color/black_text"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutName"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:hint="name"
        android:alpha="0"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red_warning"
        app:layout_constraintBottom_toTopOf="@+id/tv_numberphone1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNumberPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:prefixText="+62"
        android:alpha="0"
        android:layout_marginBottom="16dp"
        android:hint="+62 123456"
        app:errorEnabled="true"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red_warning"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_contact_phone_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:alpha="0"
        android:fontFamily="@font/monsier"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_loginDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:alpha="0"
        android:fontFamily="@font/dreamy_romantic"
        android:text="@string/login_desc"
        android:textColor="@color/black_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/quesha"
        android:text="@string/email"
        android:alpha="0"
        android:textColor="@color/black_text"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/quesha"
        android:text="@string/password"
        android:alpha="0"
        android:textColor="@color/black_text"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_example"
        android:alpha="0"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error_24"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red_warning"
        app:layout_constraintBottom_toTopOf="@+id/tv_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quesha"
            android:inputType="textEmailAddress"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:layout_marginBottom="32dp"
        android:hint="@string/pass_hint"
        app:counterEnabled="true"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red_warning"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/ripple"
        android:fontFamily="@font/monsier"
        android:alpha="0"
        android:text="@string/login"
        android:textSize="20sp"
        app:backgroundTint="@color/sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <com.google.android.material.textview.MaterialTextView-->
<!--        android:id="@+id/tv_dont_ha"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="32dp"-->
<!--        android:layout_marginStart="104dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:fontFamily="@font/quesha"-->
<!--        android:text="@string/dont_have_account"-->

<!--        android:textColor="@color/black_text"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <com.google.android.material.textview.MaterialTextView-->
<!--        android:id="@+id/tv_register"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="32dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:fontFamily="@font/monsier"-->
<!--        android:text="@string/register"-->

<!--        android:textColor="@color/black"-->
<!--        android:textSize="12sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/tv_dont_ha" />-->

</androidx.constraintlayout.widget.ConstraintLayout>